evaluation/capybarakv_interface/src/bindings.rs

extern "C" {
    pub fn rocksdb_compactionfilter_create(
        state: *mut ::std::os::raw::c_void,
        destructor: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
        filter: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                level: ::std::os::raw::c_int,
                key: *const ::std::os::raw::c_char,
                key_length: usize,
                existing_value: *const ::std::os::raw::c_char,
                value_length: usize,
                new_value: *mut *mut ::std::os::raw::c_char,
                new_value_length: *mut usize,
                value_changed: *mut ::std::os::raw::c_uchar,
            ) -> ::std::os::raw::c_uchar,
        >,
        name: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
            ) -> *const ::std::os::raw::c_char,
        >,
    ) -> *mut rocksdb_compactionfilter_t;
}
extern "C" {
    pub fn rocksdb_compactionfilter_set_ignore_snapshots(
        arg1: *mut rocksdb_compactionfilter_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_compactionfilter_destroy(arg1: *mut rocksdb_compactionfilter_t);
}
extern "C" {
    pub fn rocksdb_compactionfiltercontext_is_full_compaction(
        context: *mut rocksdb_compactionfiltercontext_t,
    ) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn rocksdb_compactionfiltercontext_is_manual_compaction(
        context: *mut rocksdb_compactionfiltercontext_t,
    ) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn rocksdb_compactionfilterfactory_create(
        state: *mut ::std::os::raw::c_void,
        destructor: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
        create_compaction_filter: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                context: *mut rocksdb_compactionfiltercontext_t,
            ) -> *mut rocksdb_compactionfilter_t,
        >,
        name: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
            ) -> *const ::std::os::raw::c_char,
        >,
    ) -> *mut rocksdb_compactionfilterfactory_t;
}
extern "C" {
    pub fn rocksdb_compactionfilterfactory_destroy(arg1: *mut rocksdb_compactionfilterfactory_t);
}
extern "C" {
    pub fn rocksdb_comparator_create(
        state: *mut ::std::os::raw::c_void,
        destructor: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
        compare: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                a: *const ::std::os::raw::c_char,
                alen: usize,
                b: *const ::std::os::raw::c_char,
                blen: usize,
            ) -> ::std::os::raw::c_int,
        >,
        name: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
            ) -> *const ::std::os::raw::c_char,
        >,
    ) -> *mut rocksdb_comparator_t;
}
extern "C" {
    pub fn rocksdb_comparator_destroy(arg1: *mut rocksdb_comparator_t);
}
extern "C" {
    pub fn rocksdb_filterpolicy_create(
        state: *mut ::std::os::raw::c_void,
        destructor: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
        create_filter: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                key_array: *const *const ::std::os::raw::c_char,
                key_length_array: *const usize,
                num_keys: ::std::os::raw::c_int,
                filter_length: *mut usize,
            ) -> *mut ::std::os::raw::c_char,
        >,
        key_may_match: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                key: *const ::std::os::raw::c_char,
                length: usize,
                filter: *const ::std::os::raw::c_char,
                filter_length: usize,
            ) -> ::std::os::raw::c_uchar,
        >,
        delete_filter: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                filter: *const ::std::os::raw::c_char,
                filter_length: usize,
            ),
        >,
        name: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
            ) -> *const ::std::os::raw::c_char,
        >,
    ) -> *mut rocksdb_filterpolicy_t;
}
extern "C" {
    pub fn rocksdb_filterpolicy_destroy(arg1: *mut rocksdb_filterpolicy_t);
}
extern "C" {
    pub fn rocksdb_filterpolicy_create_bloom(
        bits_per_key: ::std::os::raw::c_int,
    ) -> *mut rocksdb_filterpolicy_t;
}
extern "C" {
    pub fn rocksdb_filterpolicy_create_bloom_full(
        bits_per_key: ::std::os::raw::c_int,
    ) -> *mut rocksdb_filterpolicy_t;
}
extern "C" {
    pub fn rocksdb_mergeoperator_create(
        state: *mut ::std::os::raw::c_void,
        destructor: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
        full_merge: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                key: *const ::std::os::raw::c_char,
                key_length: usize,
                existing_value: *const ::std::os::raw::c_char,
                existing_value_length: usize,
                operands_list: *const *const ::std::os::raw::c_char,
                operands_list_length: *const usize,
                num_operands: ::std::os::raw::c_int,
                success: *mut ::std::os::raw::c_uchar,
                new_value_length: *mut usize,
            ) -> *mut ::std::os::raw::c_char,
        >,
        partial_merge: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                key: *const ::std::os::raw::c_char,
                key_length: usize,
                operands_list: *const *const ::std::os::raw::c_char,
                operands_list_length: *const usize,
                num_operands: ::std::os::raw::c_int,
                success: *mut ::std::os::raw::c_uchar,
                new_value_length: *mut usize,
            ) -> *mut ::std::os::raw::c_char,
        >,
        delete_value: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                value: *const ::std::os::raw::c_char,
                value_length: usize,
            ),
        >,
        name: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
            ) -> *const ::std::os::raw::c_char,
        >,
    ) -> *mut rocksdb_mergeoperator_t;
}
extern "C" {
    pub fn rocksdb_mergeoperator_destroy(arg1: *mut rocksdb_mergeoperator_t);
}
extern "C" {
    pub fn rocksdb_readoptions_create() -> *mut rocksdb_readoptions_t;
}
extern "C" {
    pub fn rocksdb_readoptions_destroy(arg1: *mut rocksdb_readoptions_t);
}
extern "C" {
    pub fn rocksdb_readoptions_set_verify_checksums(
        arg1: *mut rocksdb_readoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_readoptions_set_fill_cache(
        arg1: *mut rocksdb_readoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_readoptions_set_snapshot(
        arg1: *mut rocksdb_readoptions_t,
        arg2: *const rocksdb_snapshot_t,
    );
}
extern "C" {
    pub fn rocksdb_readoptions_set_iterate_upper_bound(
        arg1: *mut rocksdb_readoptions_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
    );
}
extern "C" {
    pub fn rocksdb_readoptions_set_iterate_lower_bound(
        arg1: *mut rocksdb_readoptions_t,
        key: *const ::std::os::raw::c_char,
        keylen: usize,
    );
}
extern "C" {
    pub fn rocksdb_readoptions_set_read_tier(
        arg1: *mut rocksdb_readoptions_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_readoptions_set_tailing(
        arg1: *mut rocksdb_readoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_readoptions_set_managed(
        arg1: *mut rocksdb_readoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_readoptions_set_readahead_size(arg1: *mut rocksdb_readoptions_t, arg2: usize);
}
extern "C" {
    pub fn rocksdb_readoptions_set_prefix_same_as_start(
        arg1: *mut rocksdb_readoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_readoptions_set_pin_data(
        arg1: *mut rocksdb_readoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_readoptions_set_total_order_seek(
        arg1: *mut rocksdb_readoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_readoptions_set_max_skippable_internal_keys(
        arg1: *mut rocksdb_readoptions_t,
        arg2: u64,
    );
}
extern "C" {
    pub fn rocksdb_readoptions_set_background_purge_on_iterator_cleanup(
        arg1: *mut rocksdb_readoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_readoptions_set_ignore_range_deletions(
        arg1: *mut rocksdb_readoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_writeoptions_create() -> *mut rocksdb_writeoptions_t;
}
extern "C" {
    pub fn rocksdb_writeoptions_destroy(arg1: *mut rocksdb_writeoptions_t);
}
extern "C" {
    pub fn rocksdb_writeoptions_set_sync(
        arg1: *mut rocksdb_writeoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_writeoptions_disable_WAL(
        opt: *mut rocksdb_writeoptions_t,
        disable: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_writeoptions_set_ignore_missing_column_families(
        arg1: *mut rocksdb_writeoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_writeoptions_set_no_slowdown(
        arg1: *mut rocksdb_writeoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_writeoptions_set_low_pri(
        arg1: *mut rocksdb_writeoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_writeoptions_set_memtable_insert_hint_per_batch(
        arg1: *mut rocksdb_writeoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_compactoptions_create() -> *mut rocksdb_compactoptions_t;
}
extern "C" {
    pub fn rocksdb_compactoptions_destroy(arg1: *mut rocksdb_compactoptions_t);
}
extern "C" {
    pub fn rocksdb_compactoptions_set_exclusive_manual_compaction(
        arg1: *mut rocksdb_compactoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_compactoptions_set_bottommost_level_compaction(
        arg1: *mut rocksdb_compactoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_compactoptions_set_change_level(
        arg1: *mut rocksdb_compactoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_compactoptions_set_target_level(
        arg1: *mut rocksdb_compactoptions_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_flushoptions_create() -> *mut rocksdb_flushoptions_t;
}
extern "C" {
    pub fn rocksdb_flushoptions_destroy(arg1: *mut rocksdb_flushoptions_t);
}
extern "C" {
    pub fn rocksdb_flushoptions_set_wait(
        arg1: *mut rocksdb_flushoptions_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_cache_create_lru(capacity: usize) -> *mut rocksdb_cache_t;
}
